--- a/.github/workflows/Recovery-Builder-TWRP.yml
+++ b/.github/workflows/Recovery-Builder-TWRP.yml
@@ -15,11 +15,11 @@ on:
       DEVICE_TREE:
         description: 'Custom Recovery Tree' # Your already made Device Tree for TWRP
         required: true
-        default: 'https://github.com/Miichon/device_infinix_X666B'
+        default: 'https://github.com/twrpdtgen/android_device_infinix_Infinix-X666B'
       DEVICE_TREE_BRANCH:
         description: 'Custom Recovery Tree Branch' # Your Device Tree Branch, make sure it's right.
         required: true
-        default: 'main'
+        default: 'vnd_x666_p740ae-user-12-SP1A.210812.016-270451-release-keys'
       DEVICE_PATH:
         description: 'Specify your Device Path' # As is, just like your DEVICE_PATH in your BoardConfig.mk
         required: true
